# miru-demo

configs/: communication.yaml  led.yaml  robot-features.yaml  safety.yaml
cpp/: .gitignore  CMakeLists.txt  README.md
cpp/examples/: CMakeLists.txt
cpp/examples/development/: CMakeLists.txt  main.cpp
cpp/examples/from_agent/: CMakeLists.txt  main.cpp
cpp/examples/from_file/: CMakeLists.txt  main.cpp
cpp/examples/production/: CMakeLists.txt  main.cpp
instances/: mobility.instance.yaml  motion-planning.instance.yaml
schemas/: communication.schema.yaml  led.schema.yaml  mobility.schema.yaml  motion-planning.schema.yaml  robot-features.schema.yaml  safety.schema.yaml
tag-types/: customer.yaml  deployment_env.schema.yaml  environment.yaml  hardware.yaml  region.schema.yaml  robot_model.schema.yaml
